--- a/views/macros/benefit-result.njk
+++ b/views/macros/benefit-result.njk
@@ -13,7 +13,7 @@
   <a href="{{ url }}"
     data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:{{id}} button click"
     target="_blank"
-    class="no-underline text-white px-4 py-2 bg-blue-800 hover:bg-blue-900 rounded text-center">
+    class="no-underline text-white px-4 py-2 bg-blue-800 hover:bg-blue-900 rounded text-center block sm:inline-block">
     {{ text }}
   </a>
 {% endmacro %}
