--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -76,20 +76,20 @@
                 </h2>
             </div>
 
-            <p class="font-light px-4">Based on what you told us, the following options do not fit your situation. </p>
+            <p class="font-light px-4">{{ __('results.unavailable_benefits_preamble') }}</p>
             
             <button id="unavailableBenefitsButton" aria-controls="unavailableBenefitsList" aria-expanded="false" class="px-4 text-red-700 hidden">
                 <div class="closed">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="w-6 h-6 fill-current inline">
                         <path d="M16 10c0 .553-.048 1-.601 1H11v4.399c0 .552-.447.601-1 .601-.553 0-1-.049-1-.601V11H4.601C4.049 11 4 10.553 4 10c0-.553.049-1 .601-1H9V4.601C9 4.048 9.447 4 10 4c.553 0 1 .048 1 .601V9h4.399c.553 0 .601.447.601 1z" />
                     </svg>
-                    <span class="underline">View list of benefits not relevant for you</span>
+                    <span class="underline">{{ __('results.unavailable_view_link') }}</span>
                 </div>
                 <div class="open hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="w-6 h-6 fill-current inline">
                         <path d="M16 10c0 .553-.048 1-.601 1H4.601C4.049 11 4 10.553 4 10c0-.553.049-1 .601-1H15.4c.552 0 .6.447.6 1z"/>
                     </svg>
-                    <span class="underline">Close list of benefits not relevant for you</span>
+                    <span class="underline">{{ __('results.unavailable_close_link') }}</span>
                 </div>
             </button>
             
