--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -1,5 +1,5 @@
 .benefits {
-  @apply  -mx-5 bg-green-lighter pb-10 px-3;
+  @apply  -mx-5 bg-green-lighter pb-8 px-3 mb-12;
   &__header {
     @apply mb-6 p-4 flex items-center text-green-darker;
 
