improvements to heading sizes

--- a/assets/scss/components/_benefits.scss
+++ b/assets/scss/components/_benefits.scss
@@ -9,10 +9,10 @@
   }
 
   .benefit {
-    @apply mt-5 p-5 bg-white border-l-4 border-green-darker;
+    @apply mt-5 p-5 bg-white border-l-4 border-green-darker text-lg;
 
     &__header {
-      @apply text-white font-normal -mx-5 -mt-5 pl-5  text-2xl mb-6 p-4 bg-green-darker;
+      @apply text-white font-bold -mx-5 -mt-5 pl-5 text-2xl mb-6 p-4 bg-green-darker;
     }
 
     &__featured_list {
