--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -37,7 +37,7 @@
                     <svg class="benefits__svg" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.875 23.4375C11.125 23.8125 11.5 23.9375 12 23.9375C12.4375 23.9375 12.8125 23.8125 13.125 23.4375L31.5625 5.0625C31.8125 4.8125 32 4.4375 32 3.9375C32 3.5 31.8125 3.125 31.5625 2.8125L29.25 0.5625C28.9375 0.25 28.5625 0.0625 28.125 0.0625C27.6875 0.0625 27.3125 0.25 27 0.5625L12 15.5625L5 8.5625C4.625 8.25 4.25 8.0625 3.8125 8.0625C3.375 8.0625 3 8.25 2.75 8.5625L0.4375 10.8125C0.125 11.125 0 11.5 0 11.9375C0 12.4375 0.125 12.8125 0.4375 13.0625L10.875 23.4375Z" fill="#138A00"/>
                     </svg>
-                    <h2 class="text-3xl font-bold m-0">{{ __n('results_title', benefits.length) }}</h2>
+                    <h2 class="text-4xl font-bold m-0">{{ __n('results_title', benefits.length) }}</h2>
                 </div>
                 <p class="px-4">{{ __("results.header_text") }}</p>
             {% endif %}
@@ -51,7 +51,7 @@
                 <svg class="benefits__svg" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.875 23.4375C11.125 23.8125 11.5 23.9375 12 23.9375C12.4375 23.9375 12.8125 23.8125 13.125 23.4375L31.5625 5.0625C31.8125 4.8125 32 4.4375 32 3.9375C32 3.5 31.8125 3.125 31.5625 2.8125L29.25 0.5625C28.9375 0.25 28.5625 0.0625 28.125 0.0625C27.6875 0.0625 27.3125 0.25 27 0.5625L12 15.5625L5 8.5625C4.625 8.25 4.25 8.0625 3.8125 8.0625C3.375 8.0625 3 8.25 2.75 8.5625L0.4375 10.8125C0.125 11.125 0 11.5 0 11.9375C0 12.4375 0.125 12.8125 0.4375 13.0625L10.875 23.4375Z" fill="#335075"/>
                 </svg>
-                <h2 class="text-3xl m-0">
+                <h2 class="text-4xl font-bold m-0">
                     {{ __('results.other_potential_help') }}
                 </h2>
             </div>
@@ -71,7 +71,7 @@
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M15.1875 11L21.4375 17.25C21.8125 17.625 22 18.125 22 18.625C22 19.1875 21.8125 19.6875 21.4375 20.0625L20.0625 21.4375C19.625 21.8125 19.125 22 18.625 22C18.0625 22 17.625 21.8125 17.25 21.4375L11 15.1875L4.75 21.4375C4.375 21.8125 3.875 22 3.375 22C2.8125 22 2.3125 21.8125 1.9375 21.4375L0.5625 20.0625C0.1875 19.6875 0 19.1875 0 18.625C0 18.125 0.1875 17.625 0.5625 17.25L6.8125 11L0.5625 4.75C0.1875 4.375 0 3.9375 0 3.375C0 2.875 0.1875 2.375 0.5625 1.9375L1.9375 0.5625C2.3125 0.1875 2.8125 0 3.375 0C3.875 0 4.375 0.1875 4.75 0.5625L11 6.8125L17.25 0.5625C17.625 0.1875 18.0625 0 18.625 0C19.125 0 19.625 0.1875 20.0625 0.5625L21.4375 1.9375C21.8125 2.375 22 2.875 22 3.375C22 3.9375 21.8125 4.375 21.4375 4.75L15.1875 11Z" fill="#C80707"/>
                 </svg>
-                <h2 class="text-3xl m-0">
+                <h2 class="text-4xl font-bold m-0">
                     {{ __('results.not_for_you') }}
                 </h2>
             </div>
