--- a/routes/results/results.njk
+++ b/routes/results/results.njk
@@ -17,7 +17,7 @@
     <h1>{{ __('results.header') }}</h1>
 
     {% if not data.lost_job %}
-        <div data-cy="missed-questions">{{ banner('red', '<p><strong class="font-normal">' + __('results.banner') + '</strong></p>') }}</div>
+        <div data-cy="missed-questions" class="mb-4">{{ banner('red', '<p><strong class="font-normal">' + __('results.banner') + '</strong></p>') }}</div>
     {% endif %}
 
     {% if no_results %}
@@ -31,8 +31,8 @@
     {% endif %}
 
     <div>
-        <div data-cy="benefit-list" class="benefits benefits--available">
-            {% if benefits.length > 0 %}
+        {% if benefits.length > 0 %}
+            <div data-cy="benefit-list" class="benefits benefits--available">
                 <div class="benefits__header">
                     <svg class="benefits__svg" width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.875 23.4375C11.125 23.8125 11.5 23.9375 12 23.9375C12.4375 23.9375 12.8125 23.8125 13.125 23.4375L31.5625 5.0625C31.8125 4.8125 32 4.4375 32 3.9375C32 3.5 31.8125 3.125 31.5625 2.8125L29.25 0.5625C28.9375 0.25 28.5625 0.0625 28.125 0.0625C27.6875 0.0625 27.3125 0.25 27 0.5625L12 15.5625L5 8.5625C4.625 8.25 4.25 8.0625 3.8125 8.0625C3.375 8.0625 3 8.25 2.75 8.5625L0.4375 10.8125C0.125 11.125 0 11.5 0 11.9375C0 12.4375 0.125 12.8125 0.4375 13.0625L10.875 23.4375Z" fill="#138A00"/>
@@ -40,11 +40,12 @@
                     <h2 class="text-4xl font-bold m-0">{{ __n('results_title', benefits.length) }}</h2>
                 </div>
                 <p class="px-4">{{ __("results.header_text") }}</p>
-            {% endif %}
-            {% for benefit in benefits %}
-                {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
-            {% endfor %}
-        </div>
+                
+                {% for benefit in benefits %}
+                    {% include "benefits/" + benefit + "-" + getLocale() +  ".njk" %}
+                {% endfor %}
+            </div>
+        {% endif %}
 
         <div class="benefits benefits--other">
             <div class="benefits__header">
