fix spacing below the start button

--- a/routes/start/start.njk
+++ b/routes/start/start.njk
@@ -10,15 +10,13 @@
         <p>{{ __('start.intro.3') }}</p>
     </div>
 
-
     <div class="start-button">
         <a class="font-semibold button-link py-6 px-5 border shadow" data-gc-analytics-customclick="ESDC|EDSC:Covid19 Benefits:Start button click" data-cy="start" href="{{ routePath(route.next) }}" role="button" draggable="false">
             {{ __('start.submit') }}
         </a>
     </div>
 
-    <div>
-    <p>
+    <p class="mt-8">
       {{ __('start.business') }}
       <a href="{{ __('start.businesslink.url') }}"
         target="_blank"
