--- a/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
+++ b/routes/question-your-situation-unchanged-income/question-your-situation-unchanged-income.njk
@@ -13,7 +13,8 @@
                     { value: 'paid-leave', text:__('your_situation.unchanged_income.2')},
                     { value: 'retired', text:__('your_situation.unchanged_income.3')},
                     { value: 'student_2019_20', text:__('your_situation.unchanged_income.4')},
-                    { value: 'high_school_grad', text:__('your_situation.unchanged_income.5')}
+                    { value: 'high_school_grad', text:__('your_situation.unchanged_income.5')},
+                    { value: 'none-of-the-above', text:__('your_situation.unchanged_income.none')}
                 ],
                 data.unchanged_income,
                 __('form.your_situation.unchanged_income'),
